<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/test_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
<RelativeLayout android:orientation="horizontal"
	android:id="@+id/top_navigate" 
	android:background="@drawable/top_back_image"
	android:layout_width="fill_parent" 
	android:layout_height="50dp">
	
	<LinearLayout 
	    android:gravity="center"
		android:layout_gravity="center_vertical" 
		android:orientation="vertical"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" 
		android:layout_centerVertical="true"
		android:layout_marginLeft="5dip">
		
		<TextView
		    android:id="@+id/NavigateBack"
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:background="@drawable/btn_back_bg"
		    android:clickable="true"
		    android:gravity="center"
		    android:paddingLeft="0px"
		    android:text="        "
		    android:textColor="#ffffffff"
		    android:textSize="20dp" />
		
	</LinearLayout>
	
  
		<TextView
	    android:id="@+id/NavigateTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:layout_centerVertical="true"
	    android:text="@string/test_title"
	    android:textColor="#ffffffff"
	    android:textSize="20sp" />
	
	
</RelativeLayout>  
    
    <!-- 此段代码保证后面组件居中显示 -->
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center">
<!--  	    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >
        
        <TableRow>
        	    
        <Button 
            android:id="@+id/test_button" 
            android:text="@string/test_label" />
        
        </TableRow>
	    	    
	</TableLayout>
	
	</LinearLayout>    
-->    

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >
        
        <TableRow>    
<!--      
   	<Button android:id="@+id/play_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/play_button_text" />
-->
        <Button 
            android:id="@+id/play_button" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dp" 
            android:background="@layout/button" 
            android:paddingBottom="8dp" 
            android:paddingLeft="25dp" 
            android:paddingRight="25dp" 
            android:paddingTop="8dp" 
            android:text="@string/play_button_text" 
            android:textColor="#ffffff" 
            android:textSize="18sp" />   	
   	
   	</TableRow>
	    	    
	</TableLayout>  
    <!-- 本文件定义About信息的布局 -->
    <TextView 
        android:id="@+id/sine_content"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_text" />
<!-- 
        android:textColor="#9900ff"
 -->    
    <!-- 此处来自原Test -->

   	
   		<CheckBox android:id="@+id/left_box" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:checked="true"
		android:text="@string/left_label" android:textColor="#ffffff" android:gravity="center" />
   		<CheckBox android:id="@+id/right_box" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:checked="true"
		android:text="@string/right_label" android:textColor="#ffffff" android:gravity="center" />
   		<CheckBox android:id="@+id/mic_box" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:textColor="#ffffff" android:checked="false"
		android:text="@string/mic_label" android:gravity="center"/>
   		<TextView android:id="@+id/log_box" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:gravity="bottom"
		android:scrollbars="vertical" android:text="" />    

    </LinearLayout>

</LinearLayout>