<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/wnoise_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
<RelativeLayout android:orientation="horizontal"
	android:id="@+id/top_navigate" 
	android:background="@drawable/top_back_image"
	android:layout_width="fill_parent" 
	android:layout_height="50dp">
	
	<LinearLayout 
	    android:gravity="center"
		android:layout_gravity="center_vertical" 
		android:orientation="vertical"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" 
		android:layout_centerVertical="true"
		android:layout_marginLeft="5dip">
		
		<TextView
		    android:id="@+id/NavigateBack"
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:background="@drawable/btn_back_bg"
		    android:clickable="true"
		    android:gravity="center"
		    android:paddingLeft="0px"
		    android:text="        "
		    android:textColor="#ffffffff"
		    android:textSize="20dp" />
		
	</LinearLayout>
	
  
		<TextView
	    android:id="@+id/NavigateTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:layout_centerVertical="true"
	    android:text="@string/wnoise_title"
	    android:textColor="#ffffffff"
	    android:textSize="20sp" />
	
	
</RelativeLayout>

    <!-- 此段代码保证后面组件居中显示 -->
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center">
	    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >
        
        <TableRow>
<!--          	    
        <Button 
            android:id="@+id/wnoise_button" 
            android:text="@string/wnoise_label" />
-->
        <Button 
            android:id="@+id/wnoise_button" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dp" 
            android:background="@layout/button" 
            android:paddingBottom="8dp" 
            android:paddingLeft="25dp" 
            android:paddingRight="25dp" 
            android:paddingTop="8dp" 
            android:text="@string/wnoise_label" 
            android:textColor="#ffffff" 
            android:textSize="18sp" />

        </TableRow>
	    	    
	</TableLayout>
	
	</LinearLayout>
	
	<ScrollView 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"> 
    
    <!-- 本文件定义White Noise信息的布局 -->
    <TextView 
        android:id="@+id/wnoise_content"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wnoise_text" />
    </ScrollView>    

</LinearLayout>